src/objects/Article_Permission__c.object
<CustomObject>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Article_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the email needs to go to a Group and not a user</inlineHelpText>
        <label>Group Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <formula>If(ISBLANK(Group_Email__c), User__r.FirstName ,Group_Email__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserEmail__c</fullName>
        <description>If they enter both a User and a Group Email put the Group Email in the UserEmail field - that is the email that gets the message.</description>
        <formula>If(ISBLANK(Group_Email__c), User__r.Email ,Group_Email__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Permission</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Article Permission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Article_Type__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0}</displayFormat>
        <label>Article Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Permission</pluralLabel>
    <recordTypes>
        <fullName>Article_Owners</fullName>
        <active>true</active>
        <description>The user/group email that will receive emails when unauthorized people Edit/Delete Articles</description>
        <label>Article Owners</label>
    </recordTypes>
    <recordTypes>
        <fullName>Editors</fullName>
        <active>true</active>
        <description>The users who can Edit/Delete Articles without generating an email  - based on Article Type</description>
        <label>Editors</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>